stock_compile_results/logs.txt
hello.c: In function 'main':
hello.c:11:36: error: expected ';' before '}' token
     printf("a = %d, b = %d", a, b )
                                    ^
                                    ;
hello.c:13:1:
 }
 ~                                   
hello.c: In function 'main':
hello.c:11:36: error: expected ';' before '}' token
     printf("a = %d, b = %d", a, b )
                                    ^
                                    ;
hello.c:13:1:
 }
 ~                                   
hello.c: In function 'main':
hello.c:11:36: error: expected ';' before '}' token
     printf("a = %d, b = %d", a, b )
                                    ^
                                    ;
hello.c:13:1:
 }
 ~                                   
hello.c: In function 'main':
hello.c:11:36: error: expected ';' before '}' token
     printf("a = %d, b = %d", a, b )
                                    ^
                                    ;
hello.c:13:1:
 }
 ~                                   
hello.c: In function 'main':
hello.c:11:36: error: expected ';' before '}' token
     printf("a = %d, b = %d", a, b )
                                    ^
                                    ;
hello.c:13:1:
 }
 ~                                   
